Se agrega bloqueo de servicio
